# swp-rust

./: Cargo.toml  README.md
src/: CanneryRow.json  automaton.rs  card_factory.rs  commands.rs  components.rs  config.rs  datatypes.rs  game_states.rs  main.rs  movement_test.rs  resolve_movement.rs  scheduled_commands.rs  serialization.rs  serialization_utils.rs  setup.rs  tiles.json
src/neural_net/: matrix_utils.rs  mod.rs
src/neural_net/activation_function/: mod.rs
src/neural_net_cpu/: mod.rs
src/neural_net_cpu/activation_function/: mod.rs
src/neural_net_gpu/: matrix_utils_gpu.rs  mod.rs
src/neural_net_gpu/activation_function_gpu/: mod.rs
src/training/: async_trainer.rs  bot.rs  crossover.rs  debug_bot.rs  genetic_alg_utils.rs  input_builder.rs  mod.rs  parent_selection.rs  serializable_bot.rs  sync_trainer.rs  trainer.rs
